--- a/quoteapp/pubspec.yaml
+++ b/quoteapp/pubspec.yaml
@@ -24,6 +24,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.10
+  flutter_share: ^2.0.0
 
   cupertino_icons: ^1.0.2
 
